# restaurant_review

./: .gitignore  note.txt  pyproject.toml  restaurant.sql
config/: settings.py  urls.py
restaurants/: models.py  serializers.py  urls.py  views.py
restaurants/migrations/: 0001_initial.py  0002_restaurant_description.py
restaurants/tests/: model_test.py  view_test.py
reviews/: models.py  serializer.py  tests.py
reviews/migrations/: 0001_initial.py  0002_initial.py
users/: models.py  serializer.py  tests.py
users/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_profile_image.py
